Start line anim for Services, change color

--- a/app/components/animBorder/animBorder.module.css
+++ b/app/components/animBorder/animBorder.module.css
@@ -35,6 +35,7 @@
     --angle: -80deg;
     --line-width: 10%;
     background: conic-gradient(from var(--angle), transparent var(--line-width), rgba(38, 150, 168, 1));
+    animation: rotate 6s infinite linear;
 }
 
 .animation:after {
@@ -42,12 +43,6 @@
     --line-width: 90%;
     background: conic-gradient(from var(--angle), transparent var(--line-width), var(--primary));
     animation: rotate 6s infinite linear;
-    animation-play-state: paused;
-
-}
-
-.animation:hover:after {
-    animation-play-state: running;
 }
 
 .content {
