--- a/app/components/services/Services.module.css
+++ b/app/components/services/Services.module.css
@@ -116,8 +116,8 @@
     font-weight: 200;
     line-height: 24px;
     color: var(--white);
-    /*max-height: 0px;*/
-    /*overflow: hidden;*/
+    max-height: 0px;
+    overflow: hidden;
     opacity: 0.8;
     transition: 0.6s;
 }
