--- a/app/components/UI/button/Button.module.css
+++ b/app/components/UI/button/Button.module.css
@@ -29,6 +29,28 @@
   color: var(--black);
 }
 
+.button svg {
+  transition: 0.4s all ease-in-out;
+}
+
+.button:hover svg {
+  stroke: var(--white) !important;
+  rotate: 360deg;
+  translate: 5px;
+  scale: 1.05;
+}
+
+.button p {
+  color: var(--white);
+  transition: 0.4s all ease-in-out;
+}
+
+.button:hover p {
+  scale: 1.05;
+  color: var(--black);
+}
+
+
 @media (max-width: 500px) {
   .button {
     padding: 14px 32px;
@@ -36,7 +58,6 @@
 }
 
 /* Fill */
-
 .fill {
   position: relative;
   background: var(--white);
@@ -52,27 +73,20 @@
   color: var(--white);
 }
 
-.fill:hover  svg path{
+.fill:hover svg path{
   stroke: var(--white) !important;
 }
 
-.fill svg {
-  transition: 0.4s all ease-in-out;
-}
 
 .fill:hover svg {
   stroke: var(--white) !important;
-  rotate: 360deg;
-  translate: 5px;
-  scale: 1.05;
 }
 
 .fill p {
-  color: #0c0c0c;
-  transition: 0.4s all ease-in-out;
+  color: var(--black);
 }
 
 .fill:hover p {
-  scale: 1.05;
-  color: #fff;
+  color: var(--white);
 }
+
