--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -4,6 +4,18 @@
   /*height: 300px;*/
   z-index: 5;
 }
+.header:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1;
+  box-shadow: 0px 10px 50px 150px var(--black);
+  pointer-events: none;
+  z-index: -1;
+}
+
 .header__section {
   width: 100%;
   height: 100%;
