--- a/app/components/services/Services.module.css
+++ b/app/components/services/Services.module.css
@@ -131,8 +131,9 @@
 }
 
 .services__card_image path {
-    stroke-dasharray: 500;
-    fill: var(--gray-transparent);
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    fill: transparent;
 }
 
 @media (max-width: 1100px) {
