--- a/app/components/home/ourProjects/OurProjects.module.css
+++ b/app/components/home/ourProjects/OurProjects.module.css
@@ -67,4 +67,167 @@
   color: var(--primary);
 }
 .projects__main_portfolio {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 120px 60px;
+}
+.project__portfolio_item {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.project__portfolio_item:nth-child(1) {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+}
+.project__portfolio_item:nth-child(2) {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+}
+
+.project__portfolio_item:nth-child(3) {
+  grid-column: 3 / 4;
+  grid-row: 2 / 4;
+}
+.project__item_banner {
+  width: 100%;
+  height: 420px;
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.project__item_banner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  padding: 1px;
+  background: linear-gradient(
+    82.89deg,
+    rgba(82, 182, 154, 0.35) 0%,
+    rgba(38, 150, 168, 0.2) 49.5%,
+    #168aad 100%
+  );
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  pointer-events: none;
+}
+.project__banner_item {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.project__banner_inner {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 40px 20px 20px 20px;
+  background: linear-gradient(
+    180deg,
+    rgba(12, 12, 12, 0) 0%,
+    rgba(12, 12, 12, 0.9) 68.5%
+  );
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.project__inner_name {
+  font-size: 28px;
+  font-weight: 300;
+  color: var(--white);
+  line-height: 40px;
+}
+.project__banner_view {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: var(--white);
+  border-radius: 10px;
+  padding: 14px 28px;
+  outline: none;
+  border: none;
+  opacity: 0;
+  transition: 0.5s;
+}
+.project__item_banner:hover .project__banner_view {
+  opacity: 1;
+}
+.project__view_text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  color: var(--black);
+}
+.project__banner_price {
+  position: absolute;
+  top: 1px;
+  right: 20px;
+  background: var(--red);
+  border-radius: 0 0 8px 8px;
+  padding: 14px;
+  transition: 0.5s;
+}
+.project__item_banner:hover .project__banner_price {
+  max-height: 44px;
+}
+.project__price_text {
+  font-size: 14px;
+  line-height: 15px;
+  font-weight: 500;
+  color: var(--white);
+}
+.project__item_info {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.project__info_category {
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 500;
+  color: var(--white);
+}
+.project__info_categories {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.project__categories_item {
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 500;
+  color: var(--white);
+  padding: 8px 16px;
+  border-radius: 20px;
+  position: relative;
+}
+
+.project__categories_item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  padding: 1px;
+  background: linear-gradient(
+    82.89deg,
+    rgba(82, 182, 154, 0.35) 0%,
+    rgba(38, 150, 168, 0.2) 49.5%,
+    #168aad 100%
+  );
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+  pointer-events: none;
 }
