--- a/front/app/components/home/about/About.module.css
+++ b/front/app/components/home/about/About.module.css
@@ -1,4 +1,5 @@
 .about__section {
+  position: relative;
   width: 100%;
   height: 100%;
   padding-top: 90px;
@@ -58,6 +59,14 @@
   user-select: none;
 }
 
+.vector {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 1100px) {
   .about__wrapper_title {
     font-size: 48px;
@@ -99,3 +108,5 @@
     gap: 28px;
   }
 }
+
+
