--- a/front/app/components/home/ourProjects/OurProjects.module.css
+++ b/front/app/components/home/ourProjects/OurProjects.module.css
@@ -4,6 +4,7 @@
   padding-top: 280px;
   padding-bottom: 90px;
 }
+
 .projects__wrapper {
   width: 100%;
   display: flex;
@@ -16,6 +17,7 @@
   flex-direction: column;
   gap: 20px;
 }
+
 .projects__heading_title {
   background: linear-gradient(
     73deg,
@@ -28,6 +30,7 @@
   line-height: 80px;
   font-weight: 500;
 }
+
 .projects__heading_subtitle {
   width: 50%;
   color: var(--gray);
@@ -35,12 +38,14 @@
   line-height: 40px;
   font-weight: 300;
 }
+
 .projects__wrapper_main {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 80px;
 }
+
 .projects__main_categories {
   width: 100%;
 }
@@ -59,6 +64,7 @@
   padding: 6px 12px;
   transition: 0.4s;
 }
+
 .projects__category_item:hover {
   color: var(--primary);
 }
@@ -66,31 +72,16 @@
   border-bottom-color: var(--primary);
   color: var(--primary);
 }
-.projects__main_portfolio {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 120px 60px;
-}
+
+
+
 .project__portfolio_item {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.project__portfolio_item:nth-child(1) {
-  grid-column: 1 / 2;
-  grid-row: 2 / 4;
-}
-.project__portfolio_item:nth-child(2) {
-  grid-column: 2 / 3;
-  grid-row: 1 / 3;
-}
 
-.project__portfolio_item:nth-child(3) {
-  grid-column: 3 / 4;
-  grid-row: 2 / 4;
-}
 .project__item_banner {
   width: 100%;
   height: 420px;
@@ -157,15 +148,26 @@
   opacity: 0;
   transition: 0.5s;
 }
+
+.project__item_banner img {
+  transition: 0.4s;
+}
+
+.project__item_banner:hover img {
+  scale: 1.2;
+}
+
 .project__item_banner:hover .project__banner_view {
   opacity: 1;
 }
+
 .project__view_text {
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
   color: var(--black);
 }
+
 .project__banner_price {
   position: absolute;
   top: 1px;
@@ -175,9 +177,7 @@
   padding: 14px;
   transition: 0.5s;
 }
-.project__item_banner:hover .project__banner_price {
-  max-height: 44px;
-}
+
 .project__price_text {
   font-size: 14px;
   line-height: 15px;
@@ -230,4 +230,8 @@
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
   pointer-events: none;
+}
+
+.mt {
+  margin-top: 20px;
 }
